# eiciel

./: .buildconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  meson.build  meson_options.txt  org.roger-ferrer.Eiciel.appdata.json  org.roger-ferrer.Eiciel.appdata.yml
.github/workflows/: autotools.yml  c-cpp.yml  meson-fedora.yml  meson.yml
contrib/: fix-build-pangomm.patch  gtk4-env.sh
doc/: LINGUAS  meson.build
doc/C/: Makefile.am  add.page  concepts.page  default.page  edit.page  eiciel.xml.in  index.page  mask.page  open.page  properties.page  remove.page  requirements.page  view.page  xattr.page
doc/C/figures/: Makefile.am
img/: Makefile.am  install_icons.sh  meson.build  update_images_in_help.sh
img/svg/: svg-to-png.sh
include/eiciel/: acl_editor_controller.h  acl_editor_widget.h  acl_element_kind.h  acl_item.h  acl_list_controller.h  acl_list_widget.h  acl_manager.h  app_window.h  application.h  confirm_toggle_button.h  enclosed_acl_editor_controller.h  enclosed_acl_editor_widget.h  i18n.h  nautilus_acl_model.h  nautilus_menu_provider.h  nautilus_model_provider.h  nautilus_xattr_model.h  participant_item.h  participant_list_controller.h  participant_list_widget.h  participant_target.h  xattr_editor_controller.h  xattr_editor_widget.h  xattr_item.h  xattr_manager.h
man/: Makefile.am  eiciel.1  meson.build
po/: ChangeLog  LINGUAS  Makevars  POTFILES  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  eiciel.pot  en_GB.po  en_US.po  enm.po  es.po  et.po  fa.po  fi.po  fr.po  he.po  hi.po  hu.po  id.po  ie.po  in.po  it.po  ja.po  ka.po  ko.po  meson.build  nl.po  nn.po  pl.po  pt_BR.po  pt_PT.po  ru.po  si.po  sv.po  uk.po  zh_CN.po  (+1 more)
src/: Makefile.am  acl_editor_controller.cpp  acl_editor_widget.cpp  acl_editor_widget.ui  acl_element_kind.hpp  acl_item.cpp  acl_list.hpp  acl_list_controller.cpp  acl_list_widget.cpp  acl_list_widget.ui  acl_manager.cpp  acl_manager.h  acl_manager.hpp  app_window.cpp  app_window.ui  application.cpp  cellrenderer_acl.cpp  cellrenderer_acl.hpp  eiciel.appdata.xml  eiciel.desktop.in  eiciel.gresource.xml  eiciel_acl_list.cpp  eiciel_acl_list.hpp  eiciel_acl_list_controller.cpp  eiciel_acl_list_controller.hpp  eiciel_app_window.cpp  eiciel_app_window.h  eiciel_application.cpp  eiciel_application.h  eiciel_container.cpp  eiciel_container.hpp  eiciel_enclosed_editor_window.cpp  eiciel_enclosed_editor_window.hpp  eiciel_enclosed_editor_window_controller.cpp  eiciel_enclosed_editor_window_controller.hpp  eiciel_main.cpp  eiciel_main.h  eiciel_main_controller.cpp  eiciel_main_controller.hpp  eiciel_main_window.cpp  (+40 more)
