option('man', type : 'boolean',
    value : 'true',
    description : 'Install man page(s)')
option('user-attributes',
    type : 'feature',
    value : 'enabled',
    description : 'Enables support for editing extended user attributes')
option('nautilus-plugin',
    type : 'feature',
    value : 'enabled',
    description: 'Enable nautilus extension plugin')
option('nautilus-extension-dir',
    type: 'string',
    value : '',
    description: 'Override nautilus extension installation directory, otherwise it will be auto-detected')
