# This ignores translations but otherwise it seems impossible to tell
# yelp where to find the help, specially if installed in a nonstandard
# location.
eicieldocdir = get_option('datadir') / 'help' / 'C' / 'eiciel'

# Documents
install_data(
  'C/add.page',
  'C/concepts.page',
  'C/default.page',
  'C/edit.page',
  'C/index.page',
  'C/mask.page',
  'C/open.page',
  'C/remove.page',
  'C/requirements.page',
  'C/view.page',
  'C/xattr.page',
  install_dir : eicieldocdir)

eicieldocfiguresdir = eicieldocdir / 'figures'

install_data(
  'C/figures/acl_entry.png',
  'C/figures/acl_permissions.png',
  'C/figures/mask_detail.png',
  'C/figures/open_file_nautilus.png',
  'C/figures/open_file.png',
  'C/figures/screen_xattr.png',
  'C/figures/ugo_permissions.png',
  '../img/others-default.png',
  '../img/others.png',
  '../img/group-acl-default.png',
  '../img/group-acl.png',
  '../img/group-default.png',
  '../img/group.png',
  '../img/mask-default.png',
  '../img/mask.png',
  '../img/user-acl-default.png',
  '../img/user-acl.png',
  '../img/user-default.png',
  '../img/user.png',
  install_dir : eicieldocfiguresdir)
