pages = [ 'add.page',
  'concepts.page',
  'default.page',
  'edit.page',
  'index.page',
  'mask.page',
  'open.page',
  'remove.page',
  'requirements.page',
  'properties.page',
  'view.page',
  'xattr.page']

media = [
  'figures/acl_editor_window.png',
  'figures/acl_entry.png',
  'figures/acl_permissions.png',
  'figures/group-acl-default.png',
  'figures/group-acl.png',
  'figures/group-default.png',
  'figures/group.png',
  'figures/mask-default.png',
  'figures/mask_detail.png',
  'figures/mask.png',
  'figures/open_file_nautilus.png',
  'figures/open_file.png',
  'figures/others-default.png',
  'figures/others.png',
  'figures/properties_nautilus_acl.png',
  'figures/properties_nautilus.png',
  'figures/properties_nautilus_xattr.png',
  'figures/screen_xattr.png',
  'figures/ugo_permissions.png',
  'figures/user-acl-default.png',
  'figures/user-acl.png',
  'figures/user-default.png',
  'figures/user.png']

gnome.yelp(meson.project_name(),
           sources: pages,
           media: media,
           symlink_media: false)
