eicieliconesdir = $(pkgdatadir)/img


dist_eicielicones_DATA = \
    others-default.png \
	others.png \
	group-acl-default.png \
	group-acl.png \
	group-default.png \
	group.png \
	mask-default.png \
	mask.png \
	user-acl-default.png \
	user-acl.png \
	user-default.png \
	user.png \
	icon_eiciel_16.png \
	icon_eiciel_24.png \
	icon_eiciel_32.png \
	icon_eiciel_48.png \
	icon_eiciel_64.png 
