SUBDIRS=figures

eicieldocdir = $(datadir)/gnome/help/eiciel/C

dist_eicieldoc_DATA = \
      add.page \
      concepts.page \
      default.page \
      edit.page \
      index.page \
      mask.page \
      open.page \
      remove.page \
      requirements.page \
      view.page \
      xattr.page \
      $(END)
