eicieldocfiguresdir=$(datadir)/gnome/help/eiciel/C/figures

dist_eicieldocfigures_DATA =  \
	entrada_acl.png \
	obrir_fitxer_nautilus.png \
	obrir_fitxer.png \
	permisos_acl.png \
	permisos_ugo.png \
	detall_mascara.png \
	pantalla_ea.png \
	$(top_srcdir)/img/others-default.png \
	$(top_srcdir)/img/others.png \
	$(top_srcdir)/img/group-acl-default.png \
	$(top_srcdir)/img/group-acl.png \
	$(top_srcdir)/img/group-default.png \
	$(top_srcdir)/img/group.png \
	$(top_srcdir)/img/mask-default.png \
	$(top_srcdir)/img/mask.png \
	$(top_srcdir)/img/user-acl-default.png \
	$(top_srcdir)/img/user-acl.png \
	$(top_srcdir)/img/user-default.png \
	$(top_srcdir)/img/user.png
