eicieldocfiguresdir=$(datadir)/gnome/help/eiciel/C/figures

dist_eicieldocfigures_DATA =  \
	acl_entry.png \
	acl_permissions.png \
	mask_detail.png \
	open_file_nautilus.png \
	open_file.png \
	screen_xattr.png \
	ugo_permissions.png \
	$(top_srcdir)/img/others-default.png \
	$(top_srcdir)/img/others.png \
	$(top_srcdir)/img/group-acl-default.png \
	$(top_srcdir)/img/group-acl.png \
	$(top_srcdir)/img/group-default.png \
	$(top_srcdir)/img/group.png \
	$(top_srcdir)/img/mask-default.png \
	$(top_srcdir)/img/mask.png \
	$(top_srcdir)/img/user-acl-default.png \
	$(top_srcdir)/img/user-acl.png \
	$(top_srcdir)/img/user-default.png \
	$(top_srcdir)/img/user.png \
	$(END)

